saw-web/src/app/modules/observe/components/observe-chart/observe-chart.component.scss
$header-padding-top: 12px;
$header-padding-bottom: 12px;
$header-font-size: 18px;
$report-height: calc(100% - #{$header-padding-bottom} - #{$header-padding-top} - #{$header-font-size});
@import "src/themes/base/colors";

.toggle-grid dx-data-grid .dx-datagrid {
  .dx-datagrid-rowsview .dx-datagrid-content table tbody tr td {
    text-align: left !important;
  }

  .dx-datagrid-headers .dx-datagrid-content table tbody tr td {
    text-align: left !important;
  }

  .dx-datagrid-pager {
    padding-top: 2px !important;
  }
}

.analysis-container .grid-view {
  height: $report-height;

  .toggle-grid {
    height: 100%;
  }
}

.chart.report-title {
  margin: 0;
  padding: $header-padding-top 0 $header-padding-bottom;
  text-align: center;
  font-family: "Lucida Grande", "Lucida Sans Unicode", Arial, Helvetica, sans-serif;
  font-weight: normal;
  font-size: $header-font-size;
  margin-left: 16%;
}

.analysis-header {
  display: flex;
  align-items: center;
  justify-content: center;
}

.flex-container {
  width: 80%;
}

.flex-icon-container {
  width: 130px;
}

.toggle-icons {
  text-align: right;
  font-size: 15px;
  margin: 10px 10px 0 0px;
}

.mat-icon.active {
  color: $primary-blue-b2;
}

.mat-icon.icon-export.report-grid-export {
  font-size: 17px;
  margin: 8px 0px 0px 10px;
}

mat-icon.export {
  background-image: url('/assets/img/excel.png');
  zoom: 0.7;
}

